[package]
name = "rust-ml-linfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa ="0.7.0"
linfa-linear = "0.7.0"
linfa-logistic = "0.7.0"
linfa-clustering = "0.7.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
linfa-bayes = "0.7.0"
linfa-preprocessing = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["iris"] }
rand = "0.8.5"
rand_isaac = "0.3.0"
rand_distr = "0.4.3"